--- a/views/menu.xml
+++ b/views/menu.xml
@@ -18,12 +18,11 @@
     <menuitem name="Rombongan Belajar" id="siswa_ocb11.menu_rombel" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.rombel_new_action_window" sequence="2"/>
     <menuitem name="Pekerjaan" id="siswa_ocb11.menu_pekerjaan" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.pekerjaan_action_window"  sequence="3"/>
     <menuitem name="Guru" id="siswa_ocb11.menu_guru" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.guru_action_window"  sequence="4"/>
-    <menuitem name="Siswa" id="siswa_ocb11.menu_siswa" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.siswa_action_window"  sequence="5"/>
+    <!-- <menuitem name="Siswa" id="siswa_ocb11.menu_siswa" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.siswa_action_window"  sequence="5"/> -->
+    <menuitem name="Siswa" id="siswa_ocb11.menu_siswa" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.res_siswa_action_window"  sequence="5"/>
    
-    <menuitem name="Siswa" id="siswa_ocb11.menu_siswa_by_rombel" parent="siswa_ocb11.submenu_kesiswaan" action="siswa_ocb11.siswa_by_rombel_action_window"  sequence="1"/>
+    <!-- <menuitem name="Siswa" id="siswa_ocb11.menu_siswa_by_rombel" parent="siswa_ocb11.submenu_kesiswaan" action="siswa_ocb11.siswa_by_rombel_action_window"  sequence="1"/> -->
     
-    <!-- <menuitem name="Server to list" id="siswa_ocb11" parent="siswa_ocb11.menu_2"
-              action="siswa_ocb11.action_server"/> -->
     
   </data>
 </odoo>
