Update rombel, tahunajaran

--- a/views/menu.xml
+++ b/views/menu.xml
@@ -21,7 +21,7 @@
    
     <menuitem name="Siswa" id="siswa_ocb11.menu_siswa_by_rombel" parent="siswa_ocb11.submenu_kesiswaan" action="siswa_ocb11.siswa_by_rombel_action_window"  sequence="1"/>
     
-    <menuitem name="Pindah Kelas" id="siswa_ocb11.menu_pindah_kelas" parent="siswa_ocb11.submenu_operation" action="siswa_ocb11.siswa_by_rombel_action_window"  sequence="1"/>
+    <menuitem name="Pindah Kelas" id="siswa_ocb11.menu_pindah_kelas" parent="siswa_ocb11.submenu_operation" action="siswa_ocb11.wizard_pindah_kelas"  sequence="1"/>
     <menuitem name="Mutasi" id="siswa_ocb11.menu_mutasi" parent="siswa_ocb11.submenu_operation" action="siswa_ocb11.siswa_by_rombel_action_window"  sequence="2"/>
     <menuitem name="Naik Kelas" id="siswa_ocb11.menu_naik_kelas" parent="siswa_ocb11.submenu_operation" action="siswa_ocb11.siswa_by_rombel_action_window"  sequence="3"/>
     
