--- a/views/menu.xml
+++ b/views/menu.xml
@@ -4,13 +4,13 @@
     <!-- Top menu item -->    
     <menuitem name="Master" id="siswa_ocb11.master_menu"/>
     <menuitem name="Kesiswaan" id="siswa_ocb11.kesiswaan_menu"/>
-    
+
     <!-- menu categories -->    
     <menuitem name="Master" id="siswa_ocb11.submenu_master" parent="siswa_ocb11.master_menu" sequence="1" />
     <menuitem name="Kesiswaan" id="siswa_ocb11.submenu_kesiswaan" parent="siswa_ocb11.kesiswaan_menu" sequence="1" />
     <menuitem name="Operations" id="siswa_ocb11.submenu_operation" parent="siswa_ocb11.kesiswaan_menu" sequence="2" />
     <!-- <menuitem name="Menu 2" id="siswa_ocb11.menu_2" parent="siswa_ocb11.menu_root"/> -->
-    
+
     <!-- actions -->    
     <menuitem name="Tahun Ajaran" id="siswa_ocb11.menu_tahunajaran" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.tahunajaran_new_action_window" sequence="1"/>
     <menuitem name="Rombongan Belajar" id="siswa_ocb11.menu_rombel" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.rombel_new_action_window" sequence="2"/>
@@ -18,12 +18,16 @@
     <menuitem name="Guru" id="siswa_ocb11.menu_guru" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.guru_action_window"  sequence="4"/>
     <!-- <menuitem name="Siswa" id="siswa_ocb11.menu_siswa" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.siswa_action_window"  sequence="5"/> -->
     <menuitem name="Siswa" id="siswa_ocb11.menu_siswa" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.res_siswa_action_window"  sequence="5"/>
-   
-    <menuitem name="Siswa" id="siswa_ocb11.menu_siswa_by_rombel" parent="siswa_ocb11.submenu_kesiswaan" action="siswa_ocb11.siswa_by_rombel_action_window"  sequence="1"/>
+
+    <!-- Kesisswaan -->
+    <!-- <menuitem name="Siswa" id="siswa_ocb11.menu_siswa_by_rombel" parent="siswa_ocb11.submenu_kesiswaan" action="siswa_ocb11.siswa_by_rombel_action_window"  sequence="1"/> -->
+    <menuitem name="Siswa" id="siswa_ocb11.menu_siswa_by_rombel_new" parent="siswa_ocb11.submenu_kesiswaan" action="siswa_ocb11.rombel_siswa_action_window"  sequence="1"/>
+    <menuitem name="Non Aktif" id="siswa_ocb11.menu_siswa_non_aktif" parent="siswa_ocb11.submenu_kesiswaan" action="siswa_ocb11.siswa_non_aktif_action_window"  sequence="2"/>
     
+
     <menuitem name="Pindah Kelas" id="siswa_ocb11.menu_pindah_kelas" parent="siswa_ocb11.submenu_operation" action="siswa_ocb11.wizard_pindah_kelas"  sequence="1"/>
-    <menuitem name="Mutasi" id="siswa_ocb11.menu_mutasi" parent="siswa_ocb11.submenu_operation" action="siswa_ocb11.siswa_by_rombel_action_window"  sequence="2"/>
-    <menuitem name="Naik Kelas" id="siswa_ocb11.menu_naik_kelas" parent="siswa_ocb11.submenu_operation" action="siswa_ocb11.siswa_by_rombel_action_window"  sequence="3"/>
+    <!-- <menuitem name="Mutasi" id="siswa_ocb11.menu_mutasi" parent="siswa_ocb11.submenu_operation" action="siswa_ocb11.wizard_mutasi"  sequence="2"/> -->
+    <menuitem name="Non Aktif" id="siswa_ocb11.menu_nonaktifkan_siswa" parent="siswa_ocb11.submenu_operation" action="siswa_ocb11.wizard_non_aktif_action"  sequence="3"/>
     
     
   </data>
