--- a/views/wizard_pindah_kelas.xml
+++ b/views/wizard_pindah_kelas.xml
@@ -11,6 +11,7 @@
                             <group>
                                 <field name="tahunajaran_id" options="{'no_create_edit': True,'no_open':True}"/>
                                 <field name="siswa_id" options="{'no_create_edit': True,'no_open':True}" />                    
+                                <field name="induk" readonly='1' />                    
                             </group>
                             <group>
                                 <field name="rombel_asal_id" options="{'no_create_edit': True,'no_open':True}" />
