--- a/views/wizard_non_aktif.xml
+++ b/views/wizard_non_aktif.xml
@@ -30,6 +30,7 @@
             res_model="siswa_ocb11.non_aktif"
             view_mode="form"
             target="new"
-            key2="client_action_multi"/>
+            key2="client_action_multi"
+            />
     </data>
 </odoo>
