--- a/views/res_siswa.xml
+++ b/views/res_siswa.xml
@@ -6,17 +6,17 @@
             <field name="sequence">22</field>            
             <field name="arch" type="xml">
                 <tree>
-                <field name="name"/>
-                <field name="panggilan"/>
-                <field name="induk"/>
-                <field name="nis"/>
-                <field name="active_rombel_id" string="Rombel" />
-                <field name="street" string="Alamat" invisible="1"/>
-                <field name="phone" />
-                <field name="ayah"/>
-                <field name="telp_ayah"/>
-                <field name="ibu"/>
-                <field name="telp_ibu"/>
+                    <field name="name"/>
+                    <field name="panggilan"/>
+                    <field name="induk"/>
+                    <field name="nis"/>
+                    <field name="active_rombel_id" string="Rombel" />
+                    <field name="street" string="Alamat" invisible="1"/>
+                    <field name="phone" />
+                    <field name="ayah"/>
+                    <field name="telp_ayah"/>
+                    <field name="ibu"/>
+                    <field name="telp_ibu"/>
                 </tree>
             </field>
         </record>
@@ -92,7 +92,7 @@
                 <field name="mobile" position="replace"></field> 
                 <xpath expr="//form/sheet" position="before">
                     <header>
-                        <button style="margin-top:5px;margin-bottom:5px;" name="print_biodata" type="object" string="Cetak Biodata" class="btn btn-default" />
+                        <button style="margin-top:5px;margin-bottom:5px;" name="print_biodata" type="object" string="Cetak Biodata" class="btn btn-default" attrs="{'invisible':[('induk', '=', 'New')]}" />
                     </header>
                 </xpath>
                 <xpath expr="//form/sheet/notebook" position="after">
@@ -106,7 +106,7 @@
                                     <field name="jenis_kelamin" /> 
                                     <field name="tempat_lahir" /> 
                                     <field name="tanggal_lahir" /> 
-                                    <field name="usia" /> 
+                                    <field name="usia" invisible="1" /> 
                                 </group>
                                 <group>
                                     <field name="anak_ke" /> 
