--- a/views/menu.xml
+++ b/views/menu.xml
@@ -13,9 +13,10 @@
     <!-- <menuitem name="Menu 2" id="siswa_ocb11.menu_2" parent="siswa_ocb11.menu_root"/> -->
 
     <!-- actions -->    
-    <menuitem name="Tahun Ajaran" id="siswa_ocb11.menu_tahunajaran" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.tahunajaran_new_action_window" sequence="1"/>
-    <menuitem name="Rombongan Belajar" id="siswa_ocb11.menu_rombel" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.rombel_new_action_window" sequence="2"/>
-    <menuitem name="Pekerjaan" id="siswa_ocb11.menu_pekerjaan" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.pekerjaan_action_window"  sequence="3"/>
+    <menuitem name="Jenjang" id="siswa_ocb11.menu_jenjang" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.jenjang_action_window" sequence="1"/>
+    <menuitem name="Tahun Ajaran" id="siswa_ocb11.menu_tahunajaran" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.tahunajaran_new_action_window" sequence="2"/>
+    <menuitem name="Rombongan Belajar" id="siswa_ocb11.menu_rombel" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.rombel_new_action_window" sequence="3"/>
+    <menuitem name="Pekerjaan" id="siswa_ocb11.menu_pekerjaan" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.pekerjaan_action_window"  sequence="4"/>
     <!-- <menuitem name="Guru" id="siswa_ocb11.menu_guru" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.guru_action_window"  sequence="4"/> -->
     <!-- <menuitem name="Siswa" id="siswa_ocb11.menu_siswa" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.siswa_action_window"  sequence="5"/> -->
     <menuitem name="Siswa" id="siswa_ocb11.menu_siswa" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.res_siswa_action_window"  sequence="5"/>
