--- a/views/wizard_report_form_presensi.xml
+++ b/views/wizard_report_form_presensi.xml
@@ -10,6 +10,7 @@
                         <group>
                             <group>
                                 <field name="tahunajaran_id" options="{'no_create_edit': True,'no_open':True}" />
+                                <field name="tanggal" />
                             </group>
                             <group>
                                 <field name="rombel_id" options="{'no_create_edit': True,'no_open':True}" />
